<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main string -->
    <string name="app_name">Trail Mapper</string>

    <!-- activites strings -->
    <string name="title_activity_show_map">ShowMap</string>
    <string name="title_activity_save_trail">Saving Trail</string>

    <!-- gps/location provider strings -->
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>

    <!-- menu/button strings -->
    <string name="question">What would you like to do?</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="mapper">Let\'s Go!</string>
    <string name="saver">Save Trail</string>
    <string name="nametrail">Please name your trail.</string>
    <string name="trailname">MyTrail</string>
    <string name="loader">Load Trail</string>
    <string name="quit">No time. Gotta Go!</string>
    <string name="stop">Pause</string>
    <string name="resume">I\'m not done yet!</string>

    <!-- display strings -->
    <string name="latlng">Lat/Long:</string>
    <string name="distance">Distance Traveled:</string>
    <string name="speed">Current Pace:</string>
    <string name="elevation">Current Altitude:</string>
    <string name="unknown">--Unknown--</string>
    <string name="hello_world">Hello world!</string>

</resources>