<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Launcher" >
  
    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onClick"
        android:text="@string/stop" />

	<com.google.android.maps.MapView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/mapview"
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="2"
	    android:apiKey="0IDcFGhFXjxkEsOtkiCryHsBCwHJmwaNfpv8DJg"
	    android:clickable="true" >
	</com.google.android.maps.MapView>

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="8dip"
	    android:stretchColumns="true"
	    android:layout_weight="0" >

		<TableRow>
		    <TextView
		        android:id="@+id/label_latlng"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_column="0"
		        android:text="@string/latlng"
		        android:textSize="14sp" />

		    <View
		        android:id="@+id/invis"
		        android:layout_width="75dip"
		        android:layout_height="match_parent" />
		    
		    <TextView
		        android:id="@+id/label_distance"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_column="2"
		        android:text="@string/distance"
		        android:textSize="14sp" />
		</TableRow>
			
		<TableRow>	
		    <TextView
		    	android:id="@+id/latlng"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_column="0"
		    	android:textSize="12sp"
		    	android:textColor="#33aaff" />

		    <TextView
		    	android:id="@+id/distance"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_column="2"
		    	android:textSize="12sp"
		    	android:textColor="#33aaff" />
	    </TableRow>
			
		<TableRow>
			<TextView
				android:id="@+id/label_elevation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_column="0"
				android:text="@string/elevation"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/label_speed"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:text="@string/speed"
				android:textSize="14sp" />
		</TableRow>
		
		<TableRow>
			<TextView
				android:id="@+id/elevation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_column="0"
				android:textSize="12sp"
				android:textColor="#33aaff" />
		
			<TextView 
				android:id="@+id/speed"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:textSize="12sp"
				android:textColor="#33aaff" />
		</TableRow>
	</TableLayout>
		
</LinearLayout>